--- a/Barbershop/environment/environment_test.yml
+++ b/Barbershop/environment/environment_test.yml
@@ -17,7 +17,6 @@ dependencies:
   - certifi=2021.10.8
   - cffi=1.14.6
   - cloudpickle=1.6.0
-  - cudatoolkit=11.0.221
   - cycler=0.10.0
   - cytoolz=0.11.0
   - dask-core=2021.8.0
@@ -34,13 +33,10 @@ dependencies:
   - glib=2.69.1
   - gmp=6.2.1
   - gnutls=3.6.15
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
   - icu=58.2
   - imageio=2.9.0
   - importlib-metadata=3.10.0
   - importlib_metadata=3.10.0
-  - intel-openmp=2021.3.0
   - ipykernel=6.2.0
   - ipython=7.26.0
   - ipython_genutils=0.2.0
@@ -60,13 +56,11 @@ dependencies:
   - lcms2=2.12
   - ld_impl_linux-64=2.35.1
   - libffi=3.3
-  - libgcc-ng=9.1.0
   - libgfortran-ng=7.3.0
   - libiconv=1.15
   - libidn2=2.3.2
   - libpng=1.6.37
   - libsodium=1.0.18
-  - libstdcxx-ng=9.1.0
   - libtasn1=4.16.0
   - libtiff=4.2.0
   - libunistring=0.9.10
@@ -81,10 +75,6 @@ dependencies:
   - matplotlib-base=3.3.4
   - matplotlib-inline=0.1.2
   - mistune=0.8.4
-  - mkl=2021.3.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.0
-  - mkl_random=1.2.2
   - nbclient=0.5.3
   - nbconvert=6.1.0
   - nbformat=5.1.3
@@ -97,7 +87,6 @@ dependencies:
   - numpy=1.20.3
   - numpy-base=1.20.3
   - olefile=0.46
-  - openh264=2.1.0
   - openjpeg=2.3.0
   - openssl=1.1.1l
   - packaging=21.0
@@ -116,14 +105,12 @@ dependencies:
   - pycparser=2.20
   - pygments=2.10.0
   - pyparsing=2.4.7
-  - pyqt=5.9.2
   - pyrsistent=0.17.3
   - python=3.7.11
   - python-dateutil=2.8.2
   - pywavelets=1.1.1
   - pyyaml=5.4.1
   - pyzmq=22.2.1
-  - qt=5.9.7
   - qtconsole=5.1.0
   - qtpy=1.10.0
   - readline=8.1
@@ -153,6 +140,19 @@ dependencies:
   - zlib=1.2.11
   - zstd=1.4.9
   - pip:
+    - intel-openmp==2021.3.0
+    - mkl_random==1.2.2
+    - mkl_fft==1.3.0
+    - libstdcxx-ng==9.1.0
+    - mkl==2021.3.0
+    - openh264==2.1.0
+    - qt==5.9.7
+    - mkl-service==2.4.0
+    - cudatoolkit==11.0.221
+    - gstreamer==1.14.0
+    - gst-plugins-base==1.14.0
+    - pyqt==5.9.2
+    - libgcc-ng==9.1.0
     - beautifulsoup4==4.10.0
     - cachetools==4.2.4
     - charset-normalizer==2.0.7
